format: format codes using Google java format
Signed-off-by: Hantsy Bai <hantsy@gmail.com>